--- a/ws/rojas/u1/WS04-ChickenFarmSimulator/ChickenFarmSimulator/nbproject/private/private.properties
+++ b/ws/rojas/u1/WS04-ChickenFarmSimulator/ChickenFarmSimulator/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\G300\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\JOSUE\\AppData\\Roaming\\NetBeans\\27\\build.properties
