--- a/ws/chicaiza/u1/ws04_Dependencies/JavaApplication7/nbproject/private/private.properties
+++ b/ws/chicaiza/u1/ws04_Dependencies/JavaApplication7/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\G300\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Daniel\\AppData\\Roaming\\NetBeans\\27\\build.properties
