--- a/hw/chicaiza/u1/hw9AntSimulator/AntSimulator/nbproject/project.properties
+++ b/hw/chicaiza/u1/hw9AntSimulator/AntSimulator/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AntSimulator
-main.class=controller.Main
+main.class=view.AntSimulator
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
